css/main.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,700|Roboto+Slab:400,700);

/* ==========================================================================
   Global styles
   ========================================================================== */

* {
    position: relative;
}

html {
    height: 100%;
}

body {
    margin:0;
    padding:0;
    transform-style: preserve-3d;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
}

h1 {
    color: white;
    display: inline-block;
    font-size: 45px;
    font-weight: 700;
    letter-spacing: 2px;
    text-align: center;
    text-transform: uppercase;
}

h2 {
    color: gray;
    font-size: 28px;
    font-weight: 100;
    margin: 20px;
}

.subheading {
    color: gray;
}

a {
    color: #FFF;
    }
    a:hover {
        color: #DE4E00;
    }

/* ==========================================================================
   Faux Parallax
   ========================================================================== */

.slide {
    box-sizing: border-box;
    min-height: 100vh;
    perspective: 1px;
    position: relative;
    text-align: center;
    transform-style: inherit;
    width: 100vw;
    }
    .slide:before {
        content: "";
        position: absolute;
        top: 0;
        bottom: 0;
        left:0;
        right:0;
    }
    .slide, .slide:before {
        background: 50% 50% / cover;
    }

.content-slide {
    background-color: #FFF;
    padding-top: 15vh;
}

/* ==========================================================================
   Section-specific styling
   ========================================================================== */

#navigation {
    padding: 0 30px;
    position: fixed;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 1;
    -webkit-transition: all 0.4s ease;
    }
    #navigation.inverted {
        background-color:rgba(255,255,255,0.9);
        }
        #navigation.inverted a {
            color: #000;
        }

    #navigation li {
        float: right;
        padding: 20px 15px;
        position: relative;
    }
    #navigation li a {
        display: block;
        font-size: 11px;
        font-weight: 700;
        letter-spacing: 1px;
        line-height: 15px;
        opacity: 1;
        text-transform: uppercase;
        text-decoration: none;
    }
    #navigation li a:hover {
        color: #DE4E00;
    }

#hello {
    background-attachment: fixed;
    background-color: #ABB3B6;
    background-position: center center;
    }
    #hello h1 {
        margin: 40vh 0 20px 0;
    }
    #hello:before {
        transform: translateZ(-1px) scale(2);
    }
    #hello #go-down {
        position: absolute;
        right: 0;
        bottom: 30px;
        left: 0;
        text-align: center;
        margin: auto;
        width: 100%;
        height: 50px;
    }
    #hello .dark-overlay {
        background: rgba(0,0,0,0.3);
        height: 100vh;
        position: fixed;
        width: 100%;
    }
    #hello #disclaimer {
        font-weight: 100;
    }

/* Responsive */
@media (max-width: 1000px) {
}
@media (max-width: 600px) {
    h2 {
        font-size: 20px;
    }
    .subheading {
        font-size: 14px;
    }
    #disclaimer {
        display: none;
    }
    #navigation {
        background-color: rgba(0,0,0,0.4);
        padding: 0 0;
    }
    #navigation li {
        padding: 20px 10px;
    }
    #navigation li a {
        line-height: 0px;
    }
}

